# Ark-Manager

./: .gitattributes  .gitignore  CHANGELOG.md  PLANO.md  README.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: gen_icons.py  github-release.ps1  release.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  backup.rs  cluster.rs  config.rs  database.rs  discord.rs  hardware.rs  import.rs  install.rs  logs.rs  mod.rs  mods.rs  network.rs  rcon.rs  scheduler.rs  seasonal_events.rs  server.rs  sync.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: agent.rs  backup.rs  mod.rs  seasonal_event.rs  server.rs  sync.rs  task.rs
src-tauri/src/services/: agent_auth.rs  agent_client.rs  agent_discovery.rs  agent_server.rs  backup_service.rs  config_generator.rs  discord.rs  event_config_swapper.rs  event_scheduler.rs  ini_parser.rs  launch_builder.rs  log_watcher.rs  mod.rs  network.rs  process_manager.rs  rcon.rs  scheduler.rs  server_installer.rs  steamcmd.rs  sync_conflict.rs  sync_engine.rs  sync_protocol.rs  sync_reconciler.rs  sync_transfer.rs  sync_watcher.rs  system_analyzer.rs
src-tauri/src/utils/: helpers.rs  mod.rs  paths.rs
src/i18n/: index.ts
src/pages/: Backups.tsx  ClusterManager.tsx  ConfigEditor.tsx  Dashboard.tsx  LogsConsole.tsx  ModManager.tsx  Monitoring.tsx  RconConsole.tsx  Scheduler.tsx  (+4 more)
(+36 files in other folders)
