[package]
name = "ark-manager"
version = "1.1.0"
description = "Ark Manager — Gerenciador de servidor ARK: Survival Evolved"
authors = ["Ark Manager"]
edition = "2021"

[lib]
name = "ark_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"

tokio = { version = "1", features = ["full"] }

# SQLite (banco local, sem dependência externa)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }

sysinfo = "0.32"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
zip = "2.1"
bytes = "1"
cron = "0.13"
walkdir = "2"
notify = "6.1.1"
flate2 = "1.1.0"
tar = "0.4.44"
base64 = "0.22.1"
futures-util = "0.3"
lazy_static = "1.4"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tokio-tungstenite = "0.21"
ini = "1.3"
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem"
] }
